@@ -35,7 +35,10 @@ android {
                     '--add-opens=java.base/java.io=ALL-UNNAMED',
                     '--add-opens=java.base/java.util=ALL-UNNAMED',
                     '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-                    '--add-opens=java.base/com.talkable.sdk=ALL-UNNAMED'
+                    '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+                    '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+                    '--add-opens=java.base/java.net=ALL-UNNAMED',
+                    '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
                 ]
                 systemProperty 'javax.net.ssl.trustStore', 'NONE'
             }
